# Test-C-Project

./: .gitignore  CMakeLists.txt  Update Resources.bat
ideas/: Game.docx
libs/glm/: vec2.hpp  vec3.hpp  vec4.hpp
src/: baseplate_plugin.js  texture_stitcher_single.js
src/c/: PreImports.cpp  PreImports.h  main.cpp
src/c/misc/: Keybind.cpp  Keybind.h
src/c/objects/: GameObject.cpp  GameObject.h  LivingObject.cpp  LivingObject.h  PhysicsEngine.cpp  PhysicsEngine.h
src/c/objects/type/: Player.cpp  Player.h  SimpleObject.cpp  SimpleObject.h  TestObject.cpp  TestObject.h
src/c/ui/: WorldEditorGui.h
src/c/util/: Animation.h  AnimatorInstance.cpp  AnimatorInstance.h  GameConstants.cpp  GameConstants.h  GenericUtil.cpp  GenericUtil.h  Keybind.h  Keybinds.h  Logger.h  Mesh.h  Model.h  ModelUtil.cpp  ModelUtil.h  Profiler.cpp  Profiler.h  RenderUtil.cpp  RenderUtil.h  Shader.h
src/c/util/model/: Animation.h  AnimatorInstance.cpp  AnimatorInstance.h  Material.h  Mesh.h  Model.h  ModelUtil.cpp  ModelUtil.h  RenderUtil.cpp  RenderUtil.h  Shader.h
src/c/world/: World.cpp  World.h
src/resources/models/: blender.blend  blender.blend1  blender.glb  charger.glb  hello.bbmodel  hello.glb  player.bbmodel  player.glb  skybox.bbmodel  skybox.glb  test.bplate  unknown.bbmodel  unknown.glb
src/resources/models/source/: animation.blend  animation.blend1  blender.blend  charger.blend  charger.blend1  charger.glb  collision.blend  collision.blend1  collision.glb  fplayer.bbmodel  player.bbmodel  player.blend  player.blend1  skybox.bbmodel  skybox.blend  skybox.blend1  unknown.blend  unknown.blend1
src/resources/shader/: fragment_shader.glsl  vertex_shader.glsl
src/resources/shader/default/: fragment_shader.glsl  vertex_shader.glsl
src/resources/shader/lighting/: fragment_shader.glsl
src/resources/shader/post/: fragment_shader.glsl
src/resources/shader/skybox/: fragment_shader.glsl  vertex_shader.glsl
src/resources/textures/: hello.texture_set.json
